--- a/src/app/pages/boards-voto/boards-voto.component.html
+++ b/src/app/pages/boards-voto/boards-voto.component.html
@@ -1,6 +1,6 @@
 <!--begin::Root-->
 <!--<div class="d-flex flex-column flex-root" style="background-color: #070d15 !important;height: 100%;">-->
-  <div class="" style="background-color: #070d15 !important;overflow: auto;">
+  <div class="" style="background-color: #070d15 !important;overflow: hidden;">
     <!--begin::Header Section-->
     <div class="mb-0" id="home">
       <!--begin::Wrapper-->
@@ -154,12 +154,10 @@
     </div>
     <!-- Video -->
     <!-- Fondo Opaco   -->
-    <div [ngClass]="showVideoFlag ? videoOn : videoOff" class="fondo-video" style="background-color: black; height: 1125px; width: 100%;position: absolute; margin: -1125px 0 0 0;opacity: 0.9;">
+    <div  class="fondo-video" [ngClass]="showVideoFlag ? videoOn : videoOff">
     </div>
-    <div style="text-align: center; position: absolute; width: 100%;margin: -860px 0px 0px 0;">
-      <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="auto" style="border-radius: 10px;-webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-      -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-      box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);"></video>
+    <div class="video-container">
+      <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="auto"></video>
     </div>
   <!--begin::Highlight-->
   <div style="background-color: #03A588;position: fixed; bottom: 0px;width: 100%; height: 80px;">
