--- a/src/app/pages/boards-voto/boards-voto.component.scss
+++ b/src/app/pages/boards-voto/boards-voto.component.scss
@@ -1,7 +1,31 @@
+.fondo-video{
+  background-color: black;
+  height: 1125px;
+  width: 100%;
+  position: absolute;
+  margin: -1125px 0 0 0;
+  opacity: 0.9;
+}
+
+.video-container{
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  margin: -860px 0px 0px 0;
+
+  video{
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+    box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+  }
+}
+
+
 .title-container{
   width: 100%;
   text-align: start;
-  padding: 0;
+  padding: 10px;
   margin-bottom: 20px;
 
   h1{
@@ -14,7 +38,7 @@
 .instructions-container{
   width: 100%;
   text-align: start;
-  padding: 0;
+  padding: 10px;
   margin-bottom: 20px;
 }
 
@@ -238,4 +262,40 @@
     position: absolute;
     /*background-color:#000;
     border: 2px solid green;*/
+  }
+
+  @media (max-width: 1200px) {
+    .video-container{
+      text-align: center;
+      position: absolute;
+      width: 100%;
+      margin: -870px 0px 0px 0;
+      padding: 10px;
+
+      video{
+        width: 100%;
+        border-radius: 10px;
+        -webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+        -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+        box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+      }
+    }
+  }
+
+  @media (max-width: 993px) {
+    .video-container{
+      text-align: center;
+      position: absolute;
+      width: 100%;
+      margin: -760px 0px 0px 0;
+      padding: 10px;
+
+      video{
+        width: 100%;
+        border-radius: 10px;
+        -webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+        -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+        box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+      }
+    }
   }
