--- a/src/app/pages/boards/boards.component.scss
+++ b/src/app/pages/boards/boards.component.scss
@@ -27,7 +27,7 @@
 .title-container{
   width: 100%;
   text-align: start;
-  padding: 0;
+  padding: 10px;
   margin-bottom: 20px;
 
   h1{
@@ -40,7 +40,7 @@
 .instructions-container{
   width: 100%;
   text-align: start;
-  padding: 0;
+  padding: 10px;
   margin-bottom: 20px;
 }
 
@@ -350,4 +350,40 @@
     position: absolute;
     /*background-color:#000;
     border: 2px solid green;*/
+  }
+
+  @media (max-width: 1200px) {
+    .video-container{
+      text-align: center;
+      position: absolute;
+      width: 100%;
+      margin: -870px 0px 0px 0;
+      padding: 10px;
+
+      video{
+        width: 100%;
+        border-radius: 10px;
+        -webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+        -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+        box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+      }
+    }
+  }
+
+  @media (max-width: 993px) {
+    .video-container{
+      text-align: center;
+      position: absolute;
+      width: 100%;
+      margin: -760px 0px 0px 0;
+      padding: 10px;
+
+      video{
+        width: 100%;
+        border-radius: 10px;
+        -webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+        -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+        box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+      }
+    }
   }
