--- a/src/app/pages/config-project-wizzard/steps/step4/step4.component.html
+++ b/src/app/pages/config-project-wizzard/steps/step4/step4.component.html
@@ -63,7 +63,7 @@
     <!--<div [formGroup]="form">
       <div class="fv-row mb-10">
         <label class="form-label">Invita a los miembros</label
-        ><!--<input
+        >--><!--<input
           name="search_members"
           formControlName="search_members"
           class="form-control form-control-lg form-control-solid"
