--- a/src/app/pages/dashboard-project/dashboard-project.component.html
+++ b/src/app/pages/dashboard-project/dashboard-project.component.html
@@ -187,7 +187,7 @@
           <!--end::Stats-->
           <!--begin::Users-->
           <div class="symbol-group symbol-hover mb-3">
-            <ng-container *ngFor="let usu of usuarios; let u = index;">
+            <ng-container *ngFor="let usu of miembros; let u = index;">
               <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
                 <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{(usu.usuario_id == usuario.id ? 'Yo' : (usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre.substring(0, 1).toUpperCase() : (usu.correo.substring(0, 1).toUpperCase())))}}</span>
               </div>
@@ -321,7 +321,7 @@
 													<div class="mh-375px scroll-y me-n7 pe-7">
 														<!--begin::User-->
 
-                              <ng-container *ngFor="let usu of usuarios; let u = index;">
+                              <ng-container *ngFor="let usu of miembros; let u = index;">
                                 <div class="d-flex flex-stack py-5 border-bottom border-gray-300 border-bottom-dashed">
                                   <div class="d-flex align-items-center">
                                   <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
@@ -396,7 +396,7 @@
 								<!--begin::Modal - Users Search-->
 								<div class="modal fade" id="kt_modal_users_search" tabindex="-1" aria-hidden="true">
 									<!--begin::Modal dialog-->
-									<div class="modal-dialog modal-dialog-centered mw-650px">
+									<div class="modal-dialog modal-dialog-centered mw-950px">
 										<!--begin::Modal content-->
 										<div class="modal-content">
 											<!--begin::Modal header-->
@@ -425,10 +425,18 @@
 												<!--end::Content-->
 												<!--begin::Search-->
 												<div id="kt_modal_users_search_handler" data-kt-search-keypress="true" data-kt-search-min-length="2" data-kt-search-enter="enter" data-kt-search-layout="inline">
+													<div class="d-flex flex-column flex-lg-row">
+
+														<div
+													  class="flex-column flex-lg-row-auto w-100 w-lg-300px w-xl-400px mb-10 mb-lg-0"
+													>
+													  <div class="card card-flush">
+														<div class="card-header pt-7" id="kt_chat_contacts_header">
+													 
 													<!--begin::Form-->
 													<form data-kt-search-element="form" class="w-100 position-relative mb-5" autocomplete="off" [formGroup]="form">
 														<!--begin::Hidden input(Added to disable form autocomplete)-->
-                            <div class="d-flex">
+                            							<div class="d-flex">
 														<input type="hidden" />
 														<!--end::Hidden input-->
 														<!--begin::Icon-->
@@ -442,9 +450,19 @@
 														<!--end::Svg Icon-->
 														<!--end::Icon-->
 														<!--begin::Input-->
-														<input type="text" class="form-control form-control-solid me-3 flex-grow-1" name="search"
-                            formControlName="search_members" value="" placeholder="Correo Electrónico" data-kt-search-element="input" />
-                            <a (click)="add()" class="btn btn-primary fw-bold flex-shrink-0">Agregar</a>
+														<span
+														[inlineSVG]="'./assets/media/icons/duotune/general/gen021.svg'"
+														class="
+															svg-icon svg-icon-2 svg-icon-lg-1 svg-icon-gray-500
+															position-absolute
+															top-50
+															ms-5
+															translate-middle-y
+														"
+														></span>
+														<input type="text" class="form-control form-control-solid px-15" name="search"
+                            formControlName="search_members" value="" placeholder="Buscar por nombre o correo" data-kt-search-element="input" (keyup)="onKey($event)" />
+                            <!--<a (click)="add()" class="btn btn-primary fw-bold flex-shrink-0">Agregar</a>-->
 														<!--end::Input-->
 														<!--begin::Spinner-->
 														<span class="position-absolute top-50 end-0 translate-middle-y lh-0 d-none me-5" data-kt-search-element="spinner">
@@ -465,8 +483,99 @@
                             </div>
 														<!--end::Reset-->
 													</form>
+												</div><div class="card-body pt-5" id="kt_chat_contacts_body">
+													<div
+													  class="scroll-y me-n5 pe-5 h-200px h-lg-auto"
+													  data-kt-scroll="true"
+													  data-kt-scroll-activate="{default: false, lg: true}"
+													  data-kt-scroll-max-height="auto"
+													  data-kt-scroll-dependencies="#kt_header, #kt_toolbar, #kt_footer, #kt_chat_contacts_header"
+													  data-kt-scroll-wrappers="#kt_content, #kt_chat_contacts_body"
+													  data-kt-scroll-offset="0px"
+													>
+													  <div class="d-flex flex-stack py-4" *ngIf="busqueda && busqueda != ''">
+														<div class="d-flex align-items-center">
+														  <div class="symbol symbol-45px symbol-circle">
+															<span
+															  class="symbol-label bg-light-danger text-danger fs-6 fw-bolder"
+															>
+															  {{busqueda.substring(0, 1).toUpperCase()}}
+															</span>
+														  </div>
+											  
+														  <div class="ms-5">
+															<a
+															  class="
+																fs-5
+																fw-bolder
+																text-gray-900 text-hover-primary
+																mb-2
+																cursor-pointer
+															  "
+															>
+															  {{busqueda}}
+															</a>
+															<!--<div class="fw-bold text-gray-400">melody@altbox.com</div>-->
+														  </div>
+														</div>
+											  
+														<div class="d-flex flex-column align-items-end ms-2">
+														  <a (click)="addItem({existe: 2, nombre: '', correo: busqueda})" class="btn btn-light btn-active-light-primary btn-sm">
+															Agregar
+														  </a>
+														</div>
+													  </div>
+											  
+													  <div class="separator separator-dashed d-none"  *ngIf="busqueda && busqueda != ''"></div>
+											  
+													  <ng-container *ngFor="let user of filteredUsuarios | async; let i = index;">
+														<div class="d-flex flex-stack py-4">
+														  <div class="d-flex align-items-center">
+															<div class="symbol symbol-45px symbol-circle">
+															  <span
+																class="symbol-label bg-light-danger text-danger fs-6 fw-bolder"
+															  >
+															  {{user.nombre.substring(0, 1).toUpperCase()}}
+															  </span>
+															</div>
+												
+															<div class="ms-5">
+															  <a
+																class="
+																  fs-5
+																  fw-bolder
+																  text-gray-900 text-hover-primary
+																  mb-2
+																  cursor-pointer
+																"
+															  >
+																{{user.nombre}}
+															  </a>
+															  <div class="fw-bold text-gray-400">{{user.correo}}</div>
+															</div>
+														  </div>
+												
+														  <div class="d-flex flex-column align-items-end ms-2">
+															<a (click)="addItem(user)" class="btn btn-light btn-active-light-primary btn-sm">
+															  Agregar
+															</a>
+															<!--<span class="text-muted fs-7 mb-1">5 hrs</span>-->
+														  </div>
+														</div>
+												
+														<div class="separator separator-dashed d-none"></div>
+													  </ng-container>
+													</div>
+												  </div></div></div>
 													<!--end::Form-->
 													<!--begin::Wrapper-->
+													
+													<div class="flex-lg-row-fluid ms-lg-7 ms-xl-10">
+														<div class="card" id="kt_chat_messenger">
+														<div class="card-header" id="kt_chat_messenger_header">
+															<div class="card-title">
+															<div class="symbol-group symbol-hover"></div>
+															<div class="d-flex justify-content-center flex-column me-3">
 													<div class="py-5">
 														<!--begin::Suggestions-->
 														<div data-kt-search-element="suggestions">
@@ -483,13 +592,13 @@
 																	<!--<div class="symbol symbol-35px symbol-circle me-5">
 																		<img alt="Pic" src="assets/media/avatars/300-6.jpg" />
 																	</div>-->
-                                  <div class="symbol symbol-35px symbol-circle me-5" data-bs-toggle="tooltip" title="{{usu.nombre}}">
-                                    <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{usu.nombre.substring(0, 1).toUpperCase()}}</span>
+                                  <div class="symbol symbol-35px symbol-circle me-5" data-bs-toggle="tooltip" title="{{usu.existe == 1 ? usu.nombre : usu.correo}}">
+                                    <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{usu.existe == 1 ? usu.nombre.substring(0, 1).toUpperCase() : usu.correo.substring(0, 1).toUpperCase()}}</span>
                                   </div>
 																	<!--end::Avatar-->
 																	<!--begin::Info-->
 																	<div class="fw-bold">
-																		<span class="fs-6 text-gray-800 me-2">{{usu.nombre}}</span>
+																		<span class="fs-6 text-gray-800 me-2">{{usu.correo}}</span>
 																		<span class="badge badge-light">Participante
                                       <!--<select class="form-select form-select-solid form-select-sm" data-control="select2" data-hide-search="true" (change)="changeRol($event, u)">
                                         <option value="Decisor">Decisor</option>
@@ -1152,6 +1261,12 @@
 														</div>
 														<!--end::Empty-->
 													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 													<!--end::Wrapper-->
 												</div>
 												<!--end::Search-->
