--- a/src/app/_metronic/layout2/layout.component.scss
+++ b/src/app/_metronic/layout2/layout.component.scss
@@ -25,7 +25,7 @@
 
 .tablero-container{
   min-width: 100%;
-  height: 520px;
+  min-height: 520px;
   overflow: auto;
   background-color: #232323;
   position: relative;
