--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -7,13 +7,13 @@
       </div>
 
       <div class="d-flex flex-column">
-        <div class="fw-bolder d-flex align-items-center fs-5">
+        <div class="fw-bolder d-flex align-items-center fs-5" style="max-width: 175px; overflow: hidden; text-overflow: ellipsis;">
           {{ _user.nombre }}
           <!--<span class="badge badge-light-success fw-bolder fs-8 px-2 py-1 ms-2"
             >Pro</span
           >-->
         </div>
-        <a class="fw-bold text-muted text-hover-primary fs-7 cursor-pointer">
+        <a class="fw-bold text-muted text-hover-primary fs-7 cursor-pointer" style="max-width: 175px; overflow: hidden; text-overflow: ellipsis;">
           {{ _user.correo_login }}
         </a>
       </div>
@@ -39,7 +39,7 @@
       My Profile
     </a>
   </div>
-  
+
   <div class="menu-item px-5">
     <a class="menu-link px-5 cursor-pointer" placement="top-start" ngbTooltip="Coming soon">
       <span class="menu-text">My Projects</span>
