--- a/src/app/pages/config-project-wizzard/steps/step4/step4.component.html
+++ b/src/app/pages/config-project-wizzard/steps/step4/step4.component.html
@@ -1,5 +1,5 @@
 <!-- begin::Header-->
-<div class="card-header border-0 pt-5">
+<div class="card-header border-0 pt-5" style="padding: 0px !important;">
   <h3 class="card-title align-items-start flex-column">
     <span class="card-label fw-bolder fs-3 mb-1">Crea tu equipo</span>
     <span class="text-muted mt-1 fw-bold fs-7">Selecciona, invita o busca a los miembros de tu equipo</span>
@@ -58,7 +58,7 @@
 </div>
 <!-- end::Header-->
 <!-- begin::Body-->
-<div class="card-body py-3">
+<div class="card-body py-3" style="padding: 0px !important;">
   <div class="tab-content">
     <!--<div [formGroup]="form">
       <div class="fv-row mb-10">
@@ -131,7 +131,7 @@
       </form>
     </div>
 
-    <div class="card-body pt-5" id="kt_chat_contacts_body">
+    <div class="card-body pt-5" style="padding: 0px !important;" id="kt_chat_contacts_body">
       <div
         class="scroll-y me-n5 pe-5 h-200px h-lg-auto"
         data-kt-scroll="true"
@@ -168,13 +168,23 @@
           </div>
 
           <div class="d-flex flex-column align-items-end ms-2">
-            <a (click)="addItem({existe: 2, nombre: '', correo: busqueda})" class="btn btn-light btn-active-light-primary btn-sm">
+            <!--<a (click)="addItem({existe: 2, nombre: '', correo: busqueda})" class="btn btn-light btn-active-light-primary btn-sm">
               Agregar
+            </a>-->
+            
+            <a (click)="addItem({existe: 2, nombre: '', correo: busqueda})"
+            class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+            me-1"
+            >
+              <span
+                [inlineSVG]="'./assets/media/icons/duotune/arrows/arr013.svg'"
+                class="svg-icon svg-icon-3"
+              ></span>
             </a>
           </div>
         </div>
 
-        <div class="separator separator-dashed d-none"  *ngIf="busqueda && busqueda != ''"></div>
+        <div class="separator separator-dashed d-none" *ngIf="busqueda && busqueda != ''"></div>
 
         <ng-container *ngFor="let user of filteredUsuarios | async; let i = index;">
           <div class="d-flex flex-stack py-4">
@@ -204,9 +214,19 @@
             </div>
   
             <div class="d-flex flex-column align-items-end ms-2">
-              <a (click)="addItem(user)" class="btn btn-light btn-active-light-primary btn-sm" *ngIf="!user.negado">
+              <!--<a (click)="addItem(user)" class="btn btn-light btn-active-light-primary btn-sm" *ngIf="!user.negado">
                 Agregar
-              </a>
+              </a>-->
+              
+                <a (click)="addItem(user)"
+                class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                me-1" *ngIf="!user.negado"
+                >
+                  <span
+                    [inlineSVG]="'./assets/media/icons/duotune/arrows/arr013.svg'"
+                    class="svg-icon svg-icon-3"
+                  ></span>
+                </a>
               <!--<span class="text-muted fs-7 mb-1">5 hrs</span>-->
             </div>
           </div>
@@ -545,7 +565,7 @@
 
 <div class="flex-lg-row-fluid ms-lg-7 ms-xl-10">
   <div class="card" id="kt_chat_messenger">
-    <div class="card-header" id="kt_chat_messenger_header">
+    <div class="card-header" style="overflow: auto !important; padding: 0px !important;" id="kt_chat_messenger_header">
       <div class="card-title">
         <div class="symbol-group symbol-hover"></div>
         <div class="d-flex justify-content-center flex-column me-3">
@@ -612,8 +632,8 @@
             <td class="text-end">
               <div class="ms-2 w-100px">
                 <select class="form-select form-select-solid form-select-sm" data-control="select2" data-hide-search="true" (change)="changeRol($event, i)">
-                  <option value="Decisor">Decisor</option>
-                  <option value="Participante" selected="selected">Participante</option>
+                  <option value="Decisor" [selected]="'Decisor' === m.rol">Decisor</option>
+                  <option value="Participante" [selected]="'Participante' === m.rol">Participante</option>
                 </select>
               </div>
               <!-- <a href="#" class="btn btn-icon btn-light-facebook btn-sm">
@@ -621,9 +641,18 @@
               </a> -->
             </td>
             <td>
-            <a (click)="quitar(i)" class="btn btn-light btn-active-light-primary btn-sm">
+              <!--<a (click)="quitar(i)" class="btn btn-light btn-active-light-primary btn-sm">
               Quitar
-            </a>
+              </a>-->
+                    <button (click)="quitar(i)"
+											class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+											me-1" *ngIf="m.id != usuario.id"
+										>
+											<span
+												[inlineSVG]="'./assets/media/icons/duotune/general/gen027.svg'"
+												class="svg-icon svg-icon-3"
+											></span>
+										</button>
             </td>
           </tr>
           <!-- <tr>
