--- a/src/app/pages/dashboard-project/dashboard-project.component.html
+++ b/src/app/pages/dashboard-project/dashboard-project.component.html
@@ -421,7 +421,7 @@
 											</div>
 											<!--begin::Modal header-->
 											<!--begin::Modal body-->
-											<div class="modal-body scroll-y mx-5 mx-xl-18 pt-0 pb-15">
+											<div class="modal-body scroll-y mx-5 mx-xl-18 pt-0 pb-15" style="padding: 0px !important; margin: 10px !important;">
 												<!--begin::Content-->
 												<div class="text-center mb-13">
 													<h1 class="mb-3">Agregar Miembros</h1>
@@ -488,7 +488,7 @@
                             </div>
 														<!--end::Reset-->
 													</form>
-												</div><div class="card-body pt-5" id="kt_chat_contacts_body">
+												</div><div class="card-body pt-5" id="kt_chat_contacts_body" style="padding: 0px !important;">
 													<div
 													  class="scroll-y me-n5 pe-5 h-200px h-lg-auto"
 													  data-kt-scroll="true"
@@ -525,9 +525,18 @@
 														</div>
 
 														<div class="d-flex flex-column align-items-end ms-2">
-														  <a (click)="addItem({existe: 2, nombre: '', correo: busqueda})" class="btn btn-light btn-active-light-primary btn-sm">
+															<!--<a (click)="addItem({existe: 2, nombre: '', correo: busqueda})" class="btn btn-light btn-active-light-primary btn-sm">
 															Agregar
-														  </a>
+														  </a>-->
+														  <a (click)="addItem({existe: 2, nombre: '', correo: busqueda})"
+															class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+															me-1"
+															>
+															<span
+																[inlineSVG]="'./assets/media/icons/duotune/arrows/arr013.svg'"
+																class="svg-icon svg-icon-3"
+															></span>
+															</a>
 														</div>
 													  </div>
 
@@ -561,8 +570,17 @@
 														  </div>
 
 														  <div class="d-flex flex-column align-items-end ms-2">
-															<a (click)="addItem(user)" class="btn btn-light btn-active-light-primary btn-sm" *ngIf="!user.negado">
+															<!--<a (click)="addItem(user)" class="btn btn-light btn-active-light-primary btn-sm" *ngIf="!user.negado">
 															  Agregar
+															</a>-->
+															<a (click)="addItem(user)"
+															class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+															me-1" *ngIf="!user.negado"
+															>
+															<span
+																[inlineSVG]="'./assets/media/icons/duotune/arrows/arr013.svg'"
+																class="svg-icon svg-icon-3"
+															></span>
 															</a>
 															<!--<span class="text-muted fs-7 mb-1">5 hrs</span>-->
 														  </div>
@@ -577,7 +595,7 @@
 
 													<div class="flex-lg-row-fluid ms-lg-7 ms-xl-10">
 														<div class="card" id="kt_chat_messenger">
-														<div class="card-header" id="kt_chat_messenger_header">
+														<div class="card-header" id="kt_chat_messenger_header" style="padding: 0px !important;">
 															<div class="card-title">
 															<div class="symbol-group symbol-hover"></div>
 															<div class="d-flex justify-content-center flex-column me-3">
@@ -588,7 +606,10 @@
 															<h3 class="fw-bold mb-5">Lista de correos:</h3>
 															<!--end::Heading-->
 															<!--begin::Users-->
-															<div class="mh-375px scroll-y me-n7 pe-7">
+															<div class="mh-375px scroll-y me-n7 pe-7" 
+															style="overflow: auto !important;
+															max-width: 450px;"
+														>
 
                               <ng-container *ngFor="let usu of members; let u = index;">
                                 <!--begin::User-->
@@ -611,7 +632,7 @@
 												</select>-->
                                     	</span>
 									</div>
-									<div class="text-end">
+									<div class="text-end" style="margin-left: 10px !important;">
 										<button (click)="quitar(u)"
 											class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm
 											me-1"
@@ -632,7 +653,7 @@
 																<!--end::User-->
 															</div>
 															<!--end::Users-->
-                              <div class="text-center mb-13" *ngIf="members.length > 0">
+                              <div class="text-center mt-7" *ngIf="members.length > 0">
 
                                 <button data-bs-dismiss="modal" class="btn btn-primary btn-sm me-3" (click)="invitar()" >Invitar</button>
                               </div>
