--- a/src/app/_metronic/layout/components/aside/aside.component.html
+++ b/src/app/_metronic/layout/components/aside/aside.component.html
@@ -5,9 +5,9 @@
     <a routerLink="/dashboard">
       <img
         alt="Logo"
-        class="h-25px logo"
-        src="./assets/media/logos/logo-1-dark.svg"
-      />
+        class="h-45px logo"
+        src="./assets/media/logos/Logo_mbipi_white.png"
+      /><!--src="./assets/media/logos/logo-1-dark.svg"-->
     </a>
   </ng-container>
 
@@ -15,8 +15,8 @@
     <a routerLink="/dashboard">
       <img
         alt="Logo"
-        class="h-25px logo"
-        src="./assets/media/logos/logo-1.svg"
+        class="h-45px logo"
+        src="./assets/media/logos/Logo_mbipi.png"
       />
     </a>
   </ng-container>
