--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -141,7 +141,7 @@
             </div>
           </div>
         </div>-->
-            <div style="width: 100%; height: 600px;overflow: auto;background-color: #fff; position: relative;padding: 20px;">
+            <!--<div style="width: 100%; height: 600px;overflow: auto;background-color: #fff; position: relative;padding: 20px;">-->
               <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
             <!--<input name="category" #category type="text"/>-->
                 <a class="add-category material-icons" (click)="addCategory()" >
@@ -158,9 +158,9 @@
                         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                       </svg></span>
                   </div>
-                  <h2 style="color: #000;line-height: 2;" onkeypress="return (this.innerText.length <= 20)" contenteditable="true" data-max-length="20" (blur)="onFocusOut($event, i)" *ngIf="i > 0">{{t.title}}</h2><!-- 
+                  <h2 style="color: #fff;line-height: 2;" onkeypress="return (this.innerText.length <= 20)" contenteditable="true" data-max-length="20" (blur)="onFocusOut($event, i)" *ngIf="i > 0">{{t.title}}</h2><!-- 
                     (keyup)="onKey($event); $event.preventDefault(); $event.stopPropagation()"-->
-                  <h2 style="color: #000;" *ngIf="i == 0">{{t.title}}</h2>
+                  <h2 style="color: #fff;" *ngIf="i == 0">{{t.title}}</h2>
                   
                   <div cdkDropList [cdkDropListData]="t.data" [ngClass]="i == 0 ? 'notes-list' : 'example-list'" (cdkDropListDropped)="drop($event)">
                     <div [ngClass]="i == 0 ? 'notes-box' : 'example-box'" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.content}}
@@ -168,13 +168,13 @@
                   </div>
                 </div>
               </ng-container>
-            </div>
+            <!--</div>-->
           </div>
         </div>
       </div>
       <ng-container *ngFor="let eq of equipo; let i = index;">
         <img id="puntero-{{eq}}" src="assets/images/puntero.png" style="position: absolute;width: 30px;height: 30px;display: none;"/>
-        <label id="equipo-{{eq}}" style="position: absolute;width: 100px;height: 100px;display: none;">{{eq}}</label>
+        <label id="equipo-{{eq}}" style="position: absolute;width: 100px;height: 100px;display: none;color:rgb(3, 165, 136);">{{eq}}</label>
       </ng-container>
       <canvas id="canvasId" #canvasRef width="100" height="100"></canvas>
     </div>
