--- a/src/app/pages/metas-voto/metas-voto.component.scss
+++ b/src/app/pages/metas-voto/metas-voto.component.scss
@@ -95,25 +95,26 @@
   }
 
   .clasificacion-container {
-    width: 400px;
+    width: 100%;
     max-width: 100%;
+    height: 230px;
     margin: 0 25px 25px 0;
-    display: inline-block;
-    vertical-align: top;
+    display: grid;/*
+    vertical-align: top;*/
   }
 
   .clasificacion-list {
     border: solid 1px #ccc;
-    min-height: 60px;
+    min-height: 170px;
     background: rgb(204, 202, 202);
     border-radius: 4px;
-    overflow: hidden;
-    display: block;
-    padding: 50px;
+    overflow: auto;
+    display: flex;
+    padding: 10px;
   }
 
   .clasificacion-box {
-    padding: 20px 10px;
+    padding: 0px 10px;
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
@@ -124,14 +125,15 @@
     cursor: move;
     background: rgb(255, 201, 4);
     font-size: 14px;
-
     width:150px;
+    min-width:150px;
     height: 150px;
     cursor: pointer;
     overflow-wrap: break-word;
     box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.75);
-    margin: auto;
-    margin-bottom: 20px;
+    /*margin: auto;*/
+    margin-left: 20px;
+    margin-bottom: 0px;
   }
 
   .clasificacion-box:nth-child(even) {
